Fix text alignment apps page tiles

--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-21/_most-visited.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-21/_most-visited.scss
@@ -285,6 +285,10 @@
 						width: 64px;
 						height: 64px;
 					}
+
+					label {
+						text-align: center;
+					}
 				}
 			}
 		}
